crates/stef-build/tests/snapshots/parser__compile@struct-generics.stef.snap
---
source: crates/stef-build/tests/parser.rs
expression: "/// Generic key-value pair.\nstruct KeyValue<K, V> {\n    key: K @1,\n    value: V @2,\n}"
input_file: crates/stef-parser/tests/inputs/struct-generics.stef
---
/// Generic key-value pair.
pub struct KeyValue<K, V> {
    pub key: K,
    pub value: V,
}
impl<K, V> ::stef::Encode for KeyValue<K, V>
where
    K: ::stef::buf::Encode,
    V: ::stef::buf::Encode,
{
    fn encode(&self, w: &mut impl ::stef::BufMut) {
        ::stef::buf::encode_field(w, 1, |w| { self.key.encode(w) });
        ::stef::buf::encode_field(w, 2, |w| { self.value.encode(w) });
    }
}
impl<K, V> ::stef::Decode for KeyValue<K, V>
where
    K: ::stef::buf::Decode,
    V: ::stef::buf::Decode,
{
    fn decode(r: &mut impl ::stef::Buf) -> ::stef::buf::Result<Self> {
        let mut key: Option<K> = None;
        let mut value: Option<V> = None;
        loop {
            match ::stef::buf::decode_id(r)? {
                ::stef::buf::END_MARKER => break,
                1 => key = Some(K::decode(r)?),
                2 => value = Some(V::decode(r)?),
                _ => continue,
            }
        }
        Ok(Self {
            key: key
                .unwrap_or_else(|| ::stef::buf::Error::MissingField {
                    id: 1,
                    name: Some("key"),
                }),
            value: value
                .unwrap_or_else(|| ::stef::buf::Error::MissingField {
                    id: 2,
                    name: Some("value"),
                }),
        })
    }
}

