crates/stef-build/tests/snapshots/parser__compile@types-nested.stef.snap
---
source: crates/stef-build/tests/parser.rs
expression: "struct Sample {\n    value: vec<option<non_zero<hash_map<i64, box<string>>>>> @1,\n}"
input_file: crates/stef-parser/tests/inputs/types-nested.stef
---
pub struct Sample {
    pub value: Vec<Option<HashMap<i64, Box<str>>>>,
}
impl ::stef::Encode for Sample {
    fn encode(&self, w: &mut impl ::stef::BufMut) {
        ::stef::buf::encode_field(w, 1, |w| { ::stef::buf::encode_vec(w, &self.value) });
    }
}
impl ::stef::Decode for Sample {
    fn decode(r: &mut impl ::stef::Buf) -> ::stef::buf::Result<Self> {
        let mut value: Option<Vec<Option<HashMap<i64, Box<str>>>>> = None;
        loop {
            match ::stef::buf::decode_id(r)? {
                ::stef::buf::END_MARKER => break,
                1 => value = Some(::stef::buf::decode_vec(r)?),
                _ => continue,
            }
        }
        Ok(Self {
            value: value
                .unwrap_or_else(|| ::stef::buf::Error::MissingField {
                    id: 1,
                    name: Some("value"),
                }),
        })
    }
}

